--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Styling to all elements */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,6 +9,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* styles to header box */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,6 +26,7 @@ body {
     color: #d9dcd6;
 }
 
+/* nav styling, with different fonts included */
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -50,6 +53,8 @@ p {
     font-size: 16px;
 }
 
+
+/* main box styling with background */
 .hero {
     height: 800px;
     width: 100%;
